--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         .step-badge.active {
             background: var(--accent);
             color: white;
+            cursor: pointer;
         }
         .step-badge.done {
             background: var(--green-soft);
@@ -132,6 +133,11 @@
         .step-badge.inactive .step-num { background: var(--border); color: var(--text-muted); }
         .step-arrow { color: var(--border); font-size: 1rem; }
         @media (max-width: 640px) { .step-label { display: none; } }
+        @media (max-width: 640px) {
+            #persistentBlocks > div[style*="grid-template-columns"] {
+                grid-template-columns: 1fr !important;
+            }
+        }
 
         /* ─── Cards ─── */
         .card {
@@ -1771,30 +1777,45 @@
                 <div id="docsList" class="docs-list"></div>
             </div>
 
-            <!-- NDA Playbook CTA -->
-            <div class="card" style="background:linear-gradient(135deg, var(--bg-warm) 0%, #FFF8F5 100%);border-color:var(--accent-ring);margin-bottom:16px;">
-                <div style="display:flex;gap:16px;align-items:flex-start;">
-                    <div style="flex:0 0 48px;height:48px;border-radius:12px;background:var(--accent-soft);display:flex;align-items:center;justify-content:center;font-size:1.4rem;">📘</div>
-                    <div style="flex:1;">
-                        <h4 style="font-size:1rem;font-weight:600;margin-bottom:4px;">NDA Playbook in the AI Era</h4>
-                        <p style="font-size:0.82rem;color:var(--text-secondary);line-height:1.5;margin-bottom:12px;">The complete guide to NDA negotiation — when to push back, which clauses to insist on, red flags to watch for, and clause-by-clause explanations with real-world examples. Written by lawyers, designed for a broad audience seeking a better understanding of NDAs and their practical mindful use.</p>
-                        <div style="display:flex;align-items:center;gap:12px;">
-                            <span style="display:inline-flex;align-items:center;gap:8px;padding:10px 20px;border-radius:10px;background:var(--accent);color:white;font-weight:600;font-size:0.85rem;opacity:0.5;cursor:not-allowed;">Get Playbook — $10 <span style="font-size:0.7rem;opacity:0.8;font-weight:400;">(coming soon)</span></span>
-                            <span style="font-size:0.72rem;color:var(--text-muted);">PDF · 40+ pages</span>
+            <!-- Next Steps: Playbook + Legal Audit -->
+            <div style="display:grid;grid-template-columns:1fr 1fr;gap:14px;margin-bottom:16px;">
+
+                <!-- Playbook Card -->
+                <div class="card" style="background:linear-gradient(135deg, #FAFAF8 0%, #FFF8F5 100%);border-color:var(--accent-ring);display:flex;flex-direction:column;justify-content:space-between;">
+                    <div>
+                        <div style="display:flex;align-items:center;gap:10px;margin-bottom:10px;">
+                            <span style="font-size:1.3rem;">📘</span>
+                            <span style="font-size:0.68rem;font-weight:600;text-transform:uppercase;letter-spacing:0.04em;color:var(--accent);background:var(--accent-soft);padding:3px 8px;border-radius:5px;">Increase to 70%</span>
                         </div>
+                        <h4 style="font-size:0.95rem;font-weight:600;margin-bottom:6px;line-height:1.3;">NDA Playbook in the AI Era</h4>
+                        <p style="font-size:0.78rem;color:var(--text-secondary);line-height:1.5;margin-bottom:14px;">The complete guide to NDA negotiation — when to push back, which clauses to insist on, red flags to watch for, and clause-by-clause explanations with real-world examples. Written by lawyers, designed for a broad audience seeking a better understanding of NDAs.</p>
+                    </div>
+                    <div>
+                        <span style="display:inline-flex;align-items:center;gap:6px;padding:10px 18px;border-radius:10px;background:var(--accent);color:white;font-weight:600;font-size:0.82rem;opacity:0.5;cursor:not-allowed;width:100%;justify-content:center;">Get Playbook — $10 <span style="font-size:0.68rem;opacity:0.8;font-weight:400;">(coming soon)</span></span>
+                        <p style="font-size:0.68rem;color:var(--text-muted);text-align:center;margin-top:6px;">PDF · 40+ pages</p>
+                    </div>
+                </div>
+
+                <!-- Legal Audit Card -->
+                <div class="card" style="background:linear-gradient(135deg, #F6FBF8 0%, #F0FAF4 100%);border-color:#C8E6D0;display:flex;flex-direction:column;justify-content:space-between;">
+                    <div>
+                        <div style="display:flex;align-items:center;gap:10px;margin-bottom:10px;">
+                            <span style="font-size:1.3rem;">⚖️</span>
+                            <span style="font-size:0.68rem;font-weight:600;text-transform:uppercase;letter-spacing:0.04em;color:var(--green);background:var(--green-soft);padding:3px 8px;border-radius:5px;">Achieve 100%</span>
+                        </div>
+                        <h4 style="font-size:0.95rem;font-weight:600;margin-bottom:6px;line-height:1.3;">Legal Audit by a Qualified Lawyer</h4>
+                        <p style="font-size:0.78rem;color:var(--text-secondary);line-height:1.5;margin-bottom:14px;">A lawyer reviews your generated NDA for enforceability, jurisdictional compliance, and missing legal protections. Delivered as a professionally formatted .docx ready for signing — within one business day.</p>
+                    </div>
+                    <div>
+                        <span style="display:inline-flex;align-items:center;gap:6px;padding:10px 18px;border-radius:10px;background:var(--green);color:white;font-weight:600;font-size:0.82rem;opacity:0.5;cursor:not-allowed;width:100%;justify-content:center;">Order Legal Audit — $100 <span style="font-size:0.68rem;opacity:0.8;font-weight:400;">(coming soon)</span></span>
+                        <p style="font-size:0.68rem;color:var(--text-muted);text-align:center;margin-top:6px;">Includes formatted .docx · 24h turnaround</p>
                     </div>
                 </div>
             </div>
 
-            <!-- CTA -->
-            <div class="cta-banner">
-                <h4>Ready to finalize your NDA?</h4>
-                <p>Download a Word template ready for signing, or get a professional legal review.</p>
-                <div class="cta-links">
-                    <span class="cta-primary" style="opacity:0.5;cursor:not-allowed;pointer-events:none;">Word Template — $10 (coming soon)</span>
-                    <span class="cta-secondary" style="opacity:0.5;cursor:not-allowed;pointer-events:none;">Legal Audit — $100 (coming soon)</span>
-                </div>
-            </div>
+            <button class="btn-secondary" style="width:100%;" onclick="backToStep1()">
+                ← Create Another NDA
+            </button>
         </div>
     </main>
 
@@ -1808,6 +1829,9 @@
                 <a href="mailto:hello@sblc.com.ua">hello@sblc.com.ua</a>
                 <a href="https://sblc.com.ua" target="_blank">sblc.com.ua</a>
             </div>
+        </div>
+        <div style="border-top:1px solid var(--border-light);margin-top:12px;padding-top:10px;text-align:center;">
+            <p style="font-size:0.7rem;color:var(--text-muted);line-height:1.5;max-width:620px;margin:0 auto;">This tool generates NDA drafts using AI and does not constitute legal advice. No attorney-client relationship is created by using this service. For legally binding agreements, consult a qualified lawyer in your jurisdiction.</p>
         </div>
     </footer>
 
@@ -2617,7 +2641,7 @@ ${senderCompany}`;
             confLabel.style.background = confColor + '18';
             confLabel.style.color = confColor;
 
-            confNote.innerHTML = `Legal enforceability of AI-generated NDAs remains at <strong>50%</strong>. While we apply best practices in our generative prompts, large language models have inherent limitations and may produce inaccuracies.<br><br>Applying the guidance from our <strong>"NDA Playbook in the AI Era"</strong> can increase enforceability up to <strong style="color:#D4670A;">70%</strong>, giving you a general understanding of the enforceability gaps.<br><br>Achieving full confidence and enforceability requires human legal expertise. <a href="#" onclick="event.preventDefault();" style="pointer-events:none;opacity:0.7;">Order a Legal Audit</a> from a qualified lawyer to review your NDA for enforceability, jurisdictional compliance, and missing legal protections — completed within one business day.`;
+            confNote.innerHTML = `Legal enforceability of AI-generated NDAs remains at <strong>50%</strong>. While we apply best practices in our generative prompts, AI models have inherent limitations and may produce inaccuracies.<br><br>Applying the guidance from our <strong>"NDA Playbook in the AI Era"</strong> can increase the scale by up to <strong style="color:#D4670A;">70%</strong>, providing a general understanding of the enforceability gaps.<br><br>Achieving <strong style="color:var(--green);">100%</strong> confidence and enforceability requires human legal expertise.`;
         }
 
         function updateDocsPanel() {
